// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> mark a gif as favorite before rendering 1`] = `
.c2 {
  width: 300px;
  height: 300px;
  border-radius: 2px;
  object-fit: cover;
}

.c0 {
  width: 300px;
  height: 300px;
  position: relative;
  margin: 5px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
  background: red;
  border-radius: 2px;
}

.c0:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c1 {
  z-index: 1;
  position: absolute;
  right: 14px;
  top: 8px;
  font-size: 2em;
  color: red;
  opacity: 1;
  -webkit-transition: 0.1s ease-in;
  transition: 0.1s ease-in;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: "red";
  cursor: pointer;
}

.c1:active {
  opacity: 1;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<a
  href="/details/1"
  onClick={[Function]}
>
  <div
    className="c0"
    color="red"
    height={300}
    width={300}
  >
    <label
      className="c1"
      onClick={[Function]}
    >
      ❤
    </label>
    <img
      className="c2"
      height={300}
      src={undefined}
      width={300}
    />
  </div>
</a>
`;

exports[`<Tile /> render the original image 1`] = `
.c2 {
  width: 400px;
  height: 400px;
  border-radius: 2px;
  object-fit: cover;
}

.c0 {
  width: 400px;
  height: 400px;
  position: relative;
  margin: 5px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
  background: red;
  border-radius: 2px;
}

.c0:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c1 {
  z-index: 1;
  position: absolute;
  right: 14px;
  top: 8px;
  font-size: 2em;
  color: white;
  opacity: 0.4;
  -webkit-transition: 0.1s ease-in;
  transition: 0.1s ease-in;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: "red";
  cursor: pointer;
}

.c1:active {
  opacity: 1;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<a
  href="/details/1"
  onClick={[Function]}
>
  <div
    className="c0"
    color="red"
    height={400}
    width={400}
  >
    <label
      className="c1"
      onClick={[Function]}
    >
      ❤
    </label>
    <img
      className="c2"
      height={400}
      src={undefined}
      width={400}
    />
  </div>
</a>
`;

exports[`<Tile /> render the small image 1`] = `
.c2 {
  width: 300px;
  height: 300px;
  border-radius: 2px;
  object-fit: cover;
}

.c0 {
  width: 300px;
  height: 300px;
  position: relative;
  margin: 5px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
  background: red;
  border-radius: 2px;
}

.c0:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c1 {
  z-index: 1;
  position: absolute;
  right: 14px;
  top: 8px;
  font-size: 2em;
  color: white;
  opacity: 0.4;
  -webkit-transition: 0.1s ease-in;
  transition: 0.1s ease-in;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: "red";
  cursor: pointer;
}

.c1:active {
  opacity: 1;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<a
  href="/details/1"
  onClick={[Function]}
>
  <div
    className="c0"
    color="red"
    height={300}
    width={300}
  >
    <label
      className="c1"
      onClick={[Function]}
    >
      ❤
    </label>
    <img
      className="c2"
      height={300}
      src={undefined}
      width={300}
    />
  </div>
</a>
`;

exports[`<Tile /> renders properly 1`] = `
.c0 {
  width: 400px;
  height: 400px;
  position: relative;
  margin: 5px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
  background: red;
  border-radius: 2px;
}

.c0:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

<a
  href="/details/1"
  onClick={[Function]}
>
  <div
    className="c0"
    color="red"
    height={400}
    width={400}
  />
</a>
`;

exports[`<Tile /> renders the heart mark 1`] = `
.c2 {
  width: 400px;
  height: 400px;
  border-radius: 2px;
  object-fit: cover;
}

.c0 {
  width: 400px;
  height: 400px;
  position: relative;
  margin: 5px;
  -webkit-transition: 0.1s ease-in-out;
  transition: 0.1s ease-in-out;
  background: red;
  border-radius: 2px;
}

.c0:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c1 {
  z-index: 1;
  position: absolute;
  right: 14px;
  top: 8px;
  font-size: 2em;
  color: white;
  opacity: 0.4;
  -webkit-transition: 0.1s ease-in;
  transition: 0.1s ease-in;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover {
  color: "red";
  cursor: pointer;
}

.c1:active {
  opacity: 1;
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<a
  href="/details/1"
  onClick={[Function]}
>
  <div
    className="c0"
    color="red"
    height={400}
    width={400}
  >
    <label
      className="c1"
      onClick={[Function]}
    >
      ❤
    </label>
    <img
      className="c2"
      height={400}
      src={undefined}
      width={400}
    />
  </div>
</a>
`;
